fix: centered wrap completely

--- a/Frontend/src/css/cssComponents/layout.css
+++ b/Frontend/src/css/cssComponents/layout.css
@@ -10,7 +10,7 @@ body {
 }
 
 .wrap {
-  margin: 0 auto;
+  margin: auto;
   justify-content: center;
   text-align: center;
 }
